--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,172 @@
+@import url("https://fonts.googleapis.com/css?family=Fredoka+One");
 body {
-  margin: 0;
+  margin: 3vw 15vw 1vw 15vw;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Fredoka One', cursive;
+  background-color: #b8defa;
+  color: #ffffff;
+  font-size: 2.2vw;
+  letter-spacing: 1px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.navbar {
+  background-color: #ffffff;
+  border-radius: 0.6vw;
+  color: #b8defa;
+  margin-bottom: 30px;
 }
+
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 1vh 0 1vh 2vw;
+}
+
+nav button {
+  margin-right: 2vw;
+  font-size: 2.5vw;
+}
+
+nav button:hover {
+  color: #ffeb99;
+}
+
+#user {
+  margin-left: 55%;
+  color: #ffeb99;
+  margin-right: 0;
+}
+
+.btn, input {
+  background-color: #ffffff;
+  color: #b8defa;
+  font-size: 2.2vw;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  font-family: 'Fredoka One', cursive;
+}
+
+.add {
+  text-align: center;
+  margin-top: 1vh;
+}
+
+.forms {
+  margin: 7vw 35%;
+}
+
+input[type="text"], input[type="password"], input[type="email"] {
+  font-size: 25px;
+  color: #b8defa;
+  line-height: 1.5;
+  padding: 4px 10px;
+  margin-bottom: 14px;
+  font-family: 'Fredoka One', cursive;
+}
+
+input[type="checkbox"] {
+  -webkit-transform: scale(2);
+          transform: scale(2);
+  margin-left: 50%;
+}
+
+input[type="checkbox"]:checked + label {
+  color: #b8defa;
+}
+
+::-webkit-input-placeholder {
+  color: #b8defa;
+}
+
+:-ms-input-placeholder {
+  color: #b8defa;
+}
+
+::-ms-input-placeholder {
+  color: #b8defa;
+}
+
+::placeholder {
+  color: #b8defa;
+}
+
+th {
+  color: #dca470;
+}
+
+th, td {
+  padding: 2vw;
+}
+
+#pagination {
+  text-align: center;
+  margin-top: 8vw;
+  margin-bottom: -5vw;
+}
+
+#pagination button {
+  background-color: #b8defa;
+  color: #ffffff;
+  margin: 0.5vw;
+  font-size: 1.5vw;
+}
+
+#username {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#page-inp {
+  width: 75px;
+  text-align: center;
+  border: none;
+  font-size: 18px;
+}
+
+.text-color-error-header {
+  color: #b71c1c;
+  font-weight: 600;
+}
+
+.text-color-error {
+  color: #c62828;
+}
+
+.text-color-corect-header {
+  color: #F0993C;
+  font-weight: 600;
+}
+
+.text-color-corect {
+  color: #808080;
+}
+
+.mod {
+  position: absolute;
+  bottom: 90%;
+  left: 30%;
+  border: none;
+  background-color: #e6be99;
+  padding: 2vw;
+  border-radius: 1vw;
+}
+/*# sourceMappingURL=index.css.map */
