--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   border-radius: 0.6vw;
   color: #b8defa;
   margin-bottom: 30px;
+  margin-left: 1%;
 }
 
 nav {
@@ -106,10 +107,40 @@ th, td {
   padding: 2vw;
 }
 
+td {
+  max-width: 10vw;
+  overflow: hidden;
+}
+
+.taskText {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  overflow-x: scroll;
+}
+
+::-webkit-scrollbar {
+  background-color: #b8defa;
+  width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.01);
+          box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.01);
+  background-color: #b8defa;
+  margin-left: 2vw;
+}
+
 #pagination {
-  text-align: center;
-  margin-top: 8vw;
-  margin-bottom: -5vw;
+  position: absolute;
+  bottom: 30px;
+  left: 40%;
 }
 
 #pagination button {
