--- a/src/index.scss
+++ b/src/index.scss
@@ -24,7 +24,7 @@ body {
   border-radius: 0.6vw; 
   color: $sky;
   margin-bottom: 30px;
-  margin-left: 1%;
+  margin-left: 2%;
 }
 
 nav {
@@ -99,14 +99,25 @@ th, td {
 }
 
 td {
-  max-width: 10vw;
+  min-width: 10vw;
+  max-width: 11vw;
   overflow: hidden;
+  font-size: 2vw;
 }
 
 .taskText {
   display: flex;
   flex-wrap: wrap;
   overflow-x: scroll;
+}
+
+.center{
+  text-align: center;
+  max-width: 7vw;
+}
+
+.task {
+  margin-left: 20%;
 }
 
 ::-webkit-scrollbar {
@@ -153,7 +164,7 @@ td {
 
 .text-color-error-header{
   color: $specks;
-  font-weight: 600;
+  font-size: 1.5vw;
 }
 .text-color-error{
   color: $pepperoni;
@@ -161,10 +172,11 @@ td {
 
 .text-color-corect-header{
   color: $yolk;
-  font-weight: 600;
+  font-size: 1.5vw;
 }
 .text-color-corect{
-  color:$gray;
+  color: $gray;
+  font-size: 1.5vw;
 }
 
 .mod {
