--- a/src/index.scss
+++ b/src/index.scss
@@ -34,29 +34,30 @@ nav {
   padding: 1vh 0 1vh 2vw;
 }
 
-nav button {
-  margin-right: 2vw;
-  font-size: 2.5vw;
-}
-
 nav button:hover {
-  color: $cheese;
+  color: lighten($crust, 5%);
 }
 
 #user {
-  margin-left: 55%;
-  color: $cheese;
+  margin-left: 52%;
+  color: lighten($crust, 5%);
   margin-right: 0;
+  font-size: 2.4vw;
 }
 
 .btn, input {
   background-color: $white;
   color: $sky;
-  font-size: 2.2vw;
+  font-size: 1.8vw;
   border-radius: 4px;
   border: none;
   cursor: pointer;
   font-family: 'Fredoka One', cursive;
+}
+
+nav .btn {
+  margin-right: 2vw;
+  font-size: 2.4vw;
 }
 
 .add {
@@ -79,7 +80,6 @@ input[type="text"], input[type="password"], input[type="email"] {
 
 input[type="checkbox"] {
   transform: scale(2);
-  margin-left: 50%;
 }
 
 input[type="checkbox"]:checked + label {
@@ -91,7 +91,7 @@ input[type="checkbox"]:checked + label {
 }
 
 th {
-  color: darken($crust, 10%);
+  color: $crust;
 }
 
 th, td {
@@ -99,10 +99,10 @@ th, td {
 }
 
 td {
-  min-width: 10vw;
-  max-width: 11vw;
+  min-width: 10.5vw;
+  max-width: 10.5vw;
   overflow: hidden;
-  font-size: 2vw;
+  font-size: 1.7vw;
 }
 
 .taskText {
@@ -181,7 +181,7 @@ td {
 
 .mod {
   position: absolute;
-  bottom: 90%;
+  bottom: 50%;
   left: 30%;
   border: none;
   background-color: $crust;
